# corporate_laptop_portal_hackathon_2026

./: .gitignore  list_accessible_files.py  pyproject.toml  regenerate_mocks.py  specification.md  test_drive_access.py
.github/: copilot-instructions.md
backend/: auth_routes.py  debug_entrypoint.py  main.py  security_headers.py  status_check.py
backend/auth/: __init__.py  routes.py
backend/common/: google_drive.py  google_sheets.py  openrouter_mock.py
backend/contracts/: __init__.py  auth.py  csv_lifecycle.py  purchase_details.py  quotes.py
backend/purchases/: __init__.py  purchase_details.py  routes.py
backend/quotes/: __init__.py  details.py  routes.py
backend/tests/: test_price_compliance.py  test_purchase_details.py  test_quotes_helpers.py  test_quotes_openrouter_integration.py
frontend/: build.mjs  common.ts  contracts.ts  employees.ts  index.html  index.ts  login.ts  new_quote.ts  new_quote_helpers.ts  onboarding.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/public/: employees.html
frontend/templates/: employees.html  index.html  login.html  new_quote.html  onboarding.html
frontend/tests/: common.test.ts  new_quote_helpers.test.ts
testdata/openrouter_mock/: README.md
